# lotools

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/lotools/: ascii_screen.h  base.h  cmdparser.h  colors.h  compile_time_math.h  coordinate.h  cross_platform_oper.h  errors.h  override.h  raii_control.h  utility.h
src/: main.cpp
vcpkg/: vcpkg.json
